--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </section>
     </div>
     <div class="search ms-5">
-      <input class="rounded-5" type="text" id="usersearch" placeholder="ex. Stockton CA US" style="width: 97%; height: 77px;">
+      <input class="rounded-5 userinput" type="text" id="usersearch" placeholder="search location">
     </div>
 
     <div class="favorites text-center rounded-4">
@@ -62,6 +62,7 @@
     </div>
     <div class="recents text-center rounded-4">
       <h1 style="font-size: 30px;">Recents</h1>
+    <div id="recView"></div>
     </div>
   </div>
     
